@@ -27,6 +27,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/apache">ASL</license>
  <notes>
+* [jan] Make shares table compatible with Oracle.
 * [jan] Make notepad checkbox links switches instead of toggles.
 * [jan] Replace categories with tags.
 * [jan] Convert to Horde_View.
